fix: padding on tablet and desktop

--- a/4-social-links-profile/style.css
+++ b/4-social-links-profile/style.css
@@ -101,5 +101,6 @@ section.container {
 @media screen and (min-width: 768px) {
   .social-links-card {
     max-width: 384px;
+    padding: 40px;
   }
 }
